todo_app/manifests/overlays/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
  namespace: project
spec:
  rules:
  - http:
      paths:
      - path: /todostest
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 2345
      - path: /
        pathType: Prefix
        backend:
          service:
            name: server-svc
            port:
              number: 2345
